Feature/suggestion api (#37)
* feature(suggestion-api) : Added API to suggest words for partial input

* fix(suggestions) : remove empty search suggestions

* fix(suggestion-service) : Only update the suggestion index when build OK
